<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludarApp"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IMCApp"
        app:layout_constraintTop_toBottomOf="@id/btnSaludar" />

    <Button
        android:id="@+id/btnTODO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todoApp"
        app:layout_constraintTop_toBottomOf="@id/btnIMCApp" />

    <Button
        android:id="@+id/btnSuperHeroList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SuperHeroList"
        app:layout_constraintTop_toBottomOf="@id/btnTODO" />
</androidx.constraintlayout.widget.ConstraintLayout>