<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/background_component_selected"
    tools:context=".imccalculator.ResultIMCCalculatorActivity">

    <TextView
        android:id="@+id/tvYourResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/result"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        >

    </TextView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvShowResult"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/tvYourResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/background_component"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
           android:layout_margin="16dp"
            >
            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textSize="32sp"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                android:gravity="center"
                >

            </TextView>
            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="24.3"
                android:layout_marginTop="70dp"
                android:textSize="90sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                >

            </TextView>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description"
                android:layout_marginTop="40dp"
                android:textSize="22sp"
                android:textColor="@color/white"

                android:gravity="center"
                >

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/cvShowResult"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/recalculate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/background_button"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
