<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstapp.FirstAppActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/escribe_tu_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/Name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
<!--    <View-->
<!--        android:id="@+id/viewPurlple"-->
<!--        android:layout_width="125dp"-->
<!--        android:layout_height="125dp"-->
<!--        android:background="@color/purple_200"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/viewTeal"-->
<!--        app:layout_constraintStart_toEndOf="@+id/viewTeal" />-->

<!--    <View-->
<!--        android:id="@+id/viewTeal"-->
<!--        android:layout_width="125dp"-->
<!--        android:layout_height="125dp"-->
<!--        android:background="@color/teal_200"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--    />-->

</androidx.constraintlayout.widget.ConstraintLayout>