<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todo_background_todoapp"
    tools:context=".todoapp.TodoActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTodoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="44dp"
        android:text="@string/todo_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:singleLine="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_category"
        android:textAllCaps="true"
        android:textColor="@color/todo_subtitle_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"


        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textAllCaps="true"
        android:textColor="@color/todo_subtitle_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        >

    </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fbAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/todo_accent"
        app:tint="@color/white"
        app:fabSize="normal"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"

        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</FrameLayout>