<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:background="@color/background_app"
    tools:context=".imccalculator.IMCCalculatorActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        app:cardCornerRadius="16dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_male_24"
                app:tint="@color/white">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/male"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                >

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:cardCornerRadius="16dp"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_female_24"
                app:tint="@color/white"
                >

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:layout_marginTop="8dp">

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                >

            </TextView>
            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"

                >

            </TextView>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"
                >

            </com.google.android.material.slider.RangeSlider>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewAge"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toStartOf="parent"

        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                >

            </TextView>
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"

                >

            </TextView>
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:orientation="horizontal"
               >
               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/btnSubtractWeight"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="8dp"
                   app:backgroundTint="@color/background_btn"
                   app:tint="@color/white"
                   android:src="@drawable/baseline_remove_24"

                   >

               </com.google.android.material.floatingactionbutton.FloatingActionButton>
               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/btnPlusWeight"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:backgroundTint="@color/background_btn"
                   app:tint="@color/white"
                   android:src="@drawable/baseline_add_24"

                   >

               </com.google.android.material.floatingactionbutton.FloatingActionButton>
           </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        app:cardCornerRadius="16dp"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toEndOf="@id/viewWeight"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                >

            </TextView>
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="26"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"

                >

            </TextView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:backgroundTint="@color/background_btn"
                    app:tint="@color/white"
                    android:src="@drawable/baseline_remove_24"

                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background_btn"
                    app:tint="@color/white"
                    android:src="@drawable/baseline_add_24"

                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/calculate"

        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>